--- a/futabus/futabus.csproj
+++ b/futabus/futabus.csproj
@@ -193,6 +193,7 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\userService.cs" />
+    <Compile Include="models\Customer_Ticket.cs" />
     <Compile Include="models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
