--- a/futabus/futabus/futabus.csproj
+++ b/futabus/futabus/futabus.csproj
@@ -181,11 +181,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_datve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_datve.Designer.cs">
+      <DependentUpon>Form_datve.cs</DependentUpon>
+    </Compile>
     <Compile Include="model\ChuyenDi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_datve.resx">
+      <DependentUpon>Form_datve.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
